# Snowflake

./: .dockerignore  .gitignore  Cargo.toml  devshell.nix  docker-compose.yml  dockerfile  flake.nix
.github/workflows/: ci.yaml  ci.yml
master/: Cargo.toml  dockerfile
master/src/: id_manager.rs  lib.rs  main.rs  ws.rs
src/: lib.rs  lock.rs  main.rs  routes.rs
worker/: Cargo.toml  dockerfile
worker/src/: lib.rs  main.rs  routes.rs  ws.rs
