[package]
name = "snowflake"
version = "0.1.0"
authors = ["Jaymes <ghastfilms613@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
dotenv = "0.15.0"
envy = "0.4"
serde = "1.0"
tokio = {version = "1.3", features = ["rt-multi-thread", "macros", "sync", "time"]}
log = "0.4.14"
env_logger = "0.9.0"
bytes = "0.5.6"
#futures = "0.3.1"
num_cpus = "1.13.0"
redsync = "1.0.0"
redis = "0.20.0"
rand = "0.8.3"
actix-rt = "2.2.0"
base64 = "0.13.0"