[package]
name = "snowflake"
version = "0.1.0"
authors = ["Jaymes <ghastfilms613@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["http1", "server", "tcp"]}
dotenv = "0.15.0"
tokio = {version = "1.3", features = ["rt-multi-thread", "sync", "time", "signal"]}
bytes = "0.5.6"
lazy_static = "1.4.0"
redsync = "1.0.0"
redis = "0.21.4"
rand = "0.8.3"
base64 = "0.13.0"
url = "2.2.2"
tower-http = {version = "0.2.0", default-features = false, features = ["trace", "add-extension"]}
tower = {version = "0.4.11", default-features = false, features = ["util", "make"]}
tracing-subscriber = {version = "0.3.4", default-features = false, features = ["env-filter", "tracing-log", "fmt"] }
tracing = "0.1.29"