[package]
name = "snowflake"
version = "0.1.0"
authors = ["Jaymes <ghastfilms613@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["standalone", "fmt-trace", "dotenv", "distributed-trace"]
standalone = []
distributed = ["redis", "redsync"]

fmt-trace = []
distributed-trace = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp", "opentelemetry-http"]

[dependencies]
tokio = {version = "1.3", features = ["rt-multi-thread", "sync", "time", "signal"]}

hyper = {version = "0.14", features = ["http1", "server", "tcp"]}
tower-http = {version = "0.2.0", default-features = false, features = ["trace"]}
tower = {version = "0.4.11", default-features = false, features = ["util", "make"]}

redsync = {version = "1.0.0", optional = true}
redis = {version = "0.21.4", optional = true}

dotenv = {version = "0.15.0", optional = true}
bytes = "0.5.6"
lazy_static = "1.4.0"
rand = "0.8.3"
base64 = "0.13.0"
url = "2.2.2"

tracing = "0.1.29"
tracing-subscriber = {version = "0.3.4", default-features = false, features = ["env-filter", "tracing-log", "fmt", "ansi"]}
#tracing-futures = {version = "0.2.5", default-features = false, features = ["tokio", "std-future", "futures-03"]}

tracing-opentelemetry = {version = "0.16.0", optional = true}
opentelemetry = { version = "0.16", features = ["rt-tokio", "trace"], optional = true}
opentelemetry-otlp = {version = "0.9.0", optional = true}
opentelemetry-http = {version = "0.5.0", optional = true}


[dev-dependencies]
test-log = {version = "0.2.8", features = ["trace"]}
tokio = {version = "1.3", features = ["macros"]}