[package]
name = "snowflake_master"
version = "0.1.0"
authors = ["Jaymes <ghastfilms613@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
envy = "0.4"
serde = "1.0"
tokio = {version = "1", features = ["rt", "sync"]}
log = "0.4.14"
env_logger = "0.9.0"
actix = "0.10.0" # actix-web-actors uses actix 0.10.0 not 0.12.0 and really doesnt like it when i give it 0.12.0 actors
actix-web-actors = "3.0.0"
bincode = "1.3.3"
actix-rt = "1.1"
futures = "0.3.1"